<resources>
    <string name="app_name">Plugged In - Новости игр и кино</string>
    <string name="action_settings">Settings</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="open"> Открыть </string>
    <string name="close"> Закрыть </string>
    <string name="review"> Обзоры </string>
    <string name="article"> Статьи </string>
    <string name="categories"> Категории </string>
    <string name="calendarItem"> Календарь </string>
    <string name="calendar"> Календарь </string>
    <string name="settings"> Настройки </string>
    <string name="offOnNotification"> Получать уведомления </string>
    <string name="offNotification"> Уведомления отключены </string>
    <string name="onNotification"> Уведомления включены </string>
    <string name="offOnSound"> Звук уведомления </string>
    <string name="offSound"> Звук отключен </string>
    <string name="onSound"> Звук включен </string>
    <string name="fontSize"> Размер шрифта контента </string>
    <string name="linkToDevelopers"> Связаться с разработчиками </string>
    <string name="emailDevelopers">to.pluggedin@gmail.com</string>
    <string name="chromeTabs"> Открывать ссылки в Chrome Custom Tabs </string>
    <string name="workWithChrome"> (Работает только если установлен Chrome Browser) </string>
    <string name="chromeTabsOn">  Chrome Custom Tabs включен </string>
    <string name="chromeTabsOff"> Chrome Custom Tabs отключен </string>
    <string name="choiceFontSize"> Выберите размер шрифта </string>
    <string name="tryAgain"> Попробовать еще раз </string>
    <string name="downloadingReviews"> Загрузка обзоров. </string>
    <string name="downloadingNews"> Загрузка новостей. </string>
    <string name="downloadingInteresting"> Загрузка интересного. </string>
    <string name="downloadingMedia"> Загрузка медиа. </string>
    <string name="downloadingArticle"> Загрузка статей. </string>
    <string name="savedToBuffer"> Сохранено в буфере </string>
    <string name="share"> Поделится </string>
    <string name="search_hint"> Поиск </string>
    <string name="find_nothing"> По вашему запросу ничего небыло найдено. </string>
    <string name="googlePlayServicesNotInstall"> Google Play Services не установлены </string>
    <string name="cancel"> Отмена </string>
    <string name="noEmailApps"> Нет приложений для отправки Email </string>
    <string name="markOfAuthor"> Оценка автора: </string>
    <string name="something_doesnt_work"> Что то не работает! </string>
    <string name="something_doesnt_work_again"> Опять что то не работает): </string>
    <string name="no_internet"> Нет подключения к сети </string>
    <string name="addComment"> Добавить комментарий </string>
    <string name="findArticles"> Поиск статей </string>
    <string name="titleRaterDialog">Оцените пожалуйста наше приложение.</string>
    <string name="btnRaterPositive"> Оценить приложение </string>
    <string name="linkToPlayMarket">market://details?id=</string>

    <string name="fontSizeSetUp"> Новый размер шрифта контента установлен </string>

    <string name="copyLink"> Копировать ссылку </string>
    <string name="shareLink"> Поделится </string>
    <string name="openInBrowser"> Открыть в браузере </string>

    <string name="listOfArticles"> Статьи </string>
    <string name="socialNetworks"> Социальные сети </string>
    <string name="socialNetworksInstagram"> Мы в Инстаграме </string>
    <string name="socialNetworksVk">  Мы Вконтакте </string>
    <string name="socialNetworksYoutube"> Мы на Youtube </string>

    <string-array name="tabs_title">
        <item> Новости </item>
        <item> Обзоры </item>
        <item> Интересное </item>
        <item> Статьи </item>
        <item> Медиа </item>
    </string-array>

    <string-array name="type_titles">
        <item> Обзор </item>
        <item> Интересное </item>
        <item> Медиа </item>
        <item> Новость </item>
        <item> Статья </item>
    </string-array>

    <string-array name="typesFontSize">
        <item> Маленький </item>
        <item> Средний </item>
        <item> Большой </item>
    </string-array>

    <string-array name="tab_titles_calendar">
        <item> Кино </item>
        <item> Игры </item>
    </string-array>

    <string name="title_activity_show_article">ShowArticleActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
</resources>
