<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/categories"
        android:orderInCategory="1"
        android:id="@+id/listOfArticles"
        android:icon="@drawable/newspaper"
        />


    <item android:title="@string/socialNetworks"
        android:orderInCategory="2"
        >
        <menu>
            <item
                android:title="@string/socialNetworksVk"
                android:id="@+id/socialNetworksVk"
                android:icon="@drawable/vk"/>

            <item
                android:title="@string/socialNetworksYoutube"
                android:id="@+id/socialNetworksYoutube"
                android:icon="@drawable/youtube_play"/>

            <item
                android:title="@string/socialNetworksInstagram"
                android:id="@+id/socialNetworksInstagram"
                android:icon="@drawable/instagram"/>
        </menu>
    </item>
</menu>